--- a/frontend/Rank-Up/src/app/task-rejected/task-rejected.page.scss
+++ b/frontend/Rank-Up/src/app/task-rejected/task-rejected.page.scss
@@ -58,3 +58,15 @@ ion-textarea{
 .leftIcon {
   --background: var(--ion-color-admin);
 }
+
+.commentArea {
+  height: 30vh;
+}
+
+.label {
+  margin-bottom: -3vh;
+  margin-top: 5vh;
+  text-align: left;
+  margin-left: 15vh;
+  width: 100%;
+}
