--- a/frontend/Rank-Up/src/app/create-team/create-team.page.html
+++ b/frontend/Rank-Up/src/app/create-team/create-team.page.html
@@ -1,6 +1,10 @@
 <ion-content [fullscreen]="true">
   <div class="backgroundAdmin">
 
+    <ion-button class="leftIcon" (click)="backButton()" fill="clear">
+      <ion-icon name="arrow-back-outline" size="large"></ion-icon>
+    </ion-button>
+
     <h1 class="title">Crea Team</h1>
     <ion-button id="modalAttached" class="insertImage">Inserire Immagine del Team
       <ion-icon slot="end" name="images-outline"></ion-icon>
