--- a/frontend/Rank-Up/src/app/user-team-profile/user-team-profile.page.html
+++ b/frontend/Rank-Up/src/app/user-team-profile/user-team-profile.page.html
@@ -25,8 +25,12 @@
     </div>
 
     <div class="listBox" *ngIf="stato">
-      <ion-list>
-        <ion-item class="item" *ngFor="let activity of activities" [routerLink]="['/task-completed']">
+      <ion-list *ngFor="let activity of activities">
+        <ion-item class="item" *ngIf="ruleOrTask(activity)" [routerLink]="['/user-rule-completed']">
+          <ion-label class="label">{{activity.name}}</ion-label>
+          <ion-button class="fakebutton" [disabled]="true">{{activity.points}} pt</ion-button>
+        </ion-item>
+        <ion-item class="item" *ngIf="!ruleOrTask(activity)" [routerLink]="['/task-completed']">
           <ion-label class="label">{{activity.name}}</ion-label>
           <ion-button class="fakebutton" [disabled]="true">{{activity.points}} pt</ion-button>
         </ion-item>
@@ -41,7 +45,6 @@
         </ion-item>
       </ion-list>
     </div>
-
-  <!-- add navbar -->
+    
   </div>
 </ion-content>
