--- a/frontend/Rank-Up/src/app/request-history/request-history.page.html
+++ b/frontend/Rank-Up/src/app/request-history/request-history.page.html
@@ -30,6 +30,7 @@
     <div class="listBox" *ngIf="segmentValue === 'rule'">
       <ion-list class="notifications" lines="none">
 
+        <P>Accettate</P>
         <ion-item class={{classAccepted}} *ngFor="let rule of rulesCompleted" [routerLink]="['/task-rejected']">
           <ion-icon name={{iconAccepted}} size="small" class="icon"></ion-icon>
           <ion-label class="label">{{rule?.user?.name}}</ion-label>
@@ -37,6 +38,7 @@
           <ion-label class="label">{{rule.timestamp}}</ion-label>
         </ion-item>
 
+        <p>Rifiutate</p>
         <ion-item class={{classRejected}} *ngFor="let rule of rulesRejected" [routerLink]="['/task-rejected']">
           <ion-icon name={{iconRejected}} size="small" class="icon"></ion-icon>
           <ion-label class="label">{{rule?.user?.name}}</ion-label>
@@ -50,6 +52,7 @@
     <div class="listBox" *ngIf="segmentValue === 'task'">
       <ion-list class="notifications" lines="none">
 
+        <p>Accettati</p>
         <ion-item class={{classAccepted}} *ngFor="let task of tasksCompleted" [routerLink]="['/task-rejected']">
           <ion-icon name={{iconAccepted}} size="small" class="icon"></ion-icon>
           <ion-label class="label">{{task?.user?.name}}</ion-label>
@@ -57,7 +60,7 @@
           <ion-label class="label">{{task.timestamp}}</ion-label>
         </ion-item>
 
-
+        <p>Rifiutati</p>
         <ion-item class={{classRejected}} *ngFor="let task of tasksRejected" [routerLink]="['/task-rejected']">
           <ion-icon name={{iconRejected}} size="small" class="icon"></ion-icon>
           <ion-label class="label">{{task?.user?.name}}</ion-label>
