added local storage

--- a/frontend/Rank-Up/src/app/admin-list/admin-list.page.html
+++ b/frontend/Rank-Up/src/app/admin-list/admin-list.page.html
@@ -4,7 +4,7 @@
       <ion-icon name="arrow-back-outline" size="large"></ion-icon>
     </ion-button>
 
-    <h1 class="title">Partecipanti<br/>[Nome Team]</h1>
+    <h1 class="title">Partecipanti<br/>{{team.name}}</h1>
 
     <ion-button class="rightIcon" [routerLink]="['/admin/add-user']">
       <ion-icon name="add-circle-outline" size="large" class="iconaRicerca"></ion-icon>
