fixed get prize

--- a/frontend/Rank-Up/src/app/prizes-page/prizes-page.page.html
+++ b/frontend/Rank-Up/src/app/prizes-page/prizes-page.page.html
@@ -9,7 +9,7 @@
     </div>
     <div id="div-image-title">{{user.name}} </div>
 
-    <div id="div-points">Punti: {{points}}</div>
+    <div id="div-points">Punti: {{userJoinsTeam.points}}</div>
 
     <div id="div-title-prizes">Premi</div>
     <div id="div-prizes" scroll="true">
