--- a/frontend/Rank-Up/src/app/participants/participants.page.html
+++ b/frontend/Rank-Up/src/app/participants/participants.page.html
@@ -1,6 +1,5 @@
-
 <ion-content [fullscreen]="true">
- <div class="backgroundUser">
+  <div class="backgroundUser">
 
     <ion-button class="leftIcon" fill="clear" (click)="backButton()">
       <ion-icon name="arrow-back-outline" class="iconaBack" size="large"></ion-icon>
@@ -8,11 +7,9 @@
     <h1 class="title">{{team.name}}</h1>
     <h2 class="team-code">Codice: {{team.codice}}</h2>
 
-    <div class="search">
-      <app-search-bar></app-search-bar>
-    </div>
+    <ion-searchbar class="search" (ionInput)="ricerca($event)" placeholder="Cerca"></ion-searchbar>
 
-    <div>
+    <div class="search">
       <ion-segment value="1" (ionChange)="segmentChanged($event)">
         <ion-segment-button value=1>
           <ion-label class="segmentText">Nome</ion-label>
@@ -24,24 +21,43 @@
     </div>
 
     <div class="listBox" *ngIf="stato">
-      <ion-list class="list" lines="none">
-          <ion-item class="item" *ngFor="let p of partecipantsPoints; let i = index">
-            <div class="item-div">
-              <img class="imgUser" alt="User" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
-              <ion-label class="nomeUtente">{{partecipants[i].username}}</ion-label>
-              <ion-label class="points-label">{{p.points}}</ion-label>
-            </div>
-          </ion-item>
+      <ion-list class="list" lines="none" *ngIf="!statoRicerca">
+        <ion-item class="item" *ngFor="let user of partecipantsPoints">
+          <div class="item-div">
+            <img class="imgUser" alt="User" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+            <ion-label class="nomeUtente">{{user.user.username}}</ion-label>
+            <ion-label class="points-label">{{user.points}}</ion-label>
+          </div>
+        </ion-item>
+      </ion-list>
+
+      <ion-list class="list" lines="none" *ngIf="statoRicerca">
+        <ion-item class="item" *ngFor="let user of userJoinsTeamSearch">
+          <div class="item-div">
+            <img class="imgUser" alt="User" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+            <ion-label class="nomeUtente">{{user.username}}</ion-label>
+            <ion-label class="points-label">{{user.points}}</ion-label>
+          </div>
+        </ion-item>
       </ion-list>
     </div>
     <div class="listBox" *ngIf="!stato">
-      <ion-list class="list" lines="none">
-        <ion-item class="item" *ngFor="let u of partecipants">
-            <div class="item-div">
+      <ion-list class="list" lines="none" *ngIf="!statoRicerca">
+        <ion-item class="item" *ngFor="let user of partecipantsPoints">
+          <div class="item-div">
             <img class="imgUser" alt="User" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
-            <ion-label class="nomeUtente">{{u.username}}</ion-label>
-            </div>
-          </ion-item>
+            <ion-label class="nomeUtente">{{user.user.username}}</ion-label>
+          </div>
+        </ion-item>
+      </ion-list>
+
+      <ion-list class="list" lines="none" *ngIf="statoRicerca">
+        <ion-item class="item" *ngFor="let user of userJoinsTeamSearch">
+          <div class="item-div">
+            <img class="imgUser" alt="User" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+            <ion-label class="nomeUtente">{{user.username}}</ion-label>
+          </div>
+        </ion-item>
       </ion-list>
     </div>
   </div>
