--- a/frontend/Rank-Up/src/app/pending-tasks/pending-tasks.page.html
+++ b/frontend/Rank-Up/src/app/pending-tasks/pending-tasks.page.html
@@ -11,7 +11,7 @@
       <ion-list>
         <div *ngIf="this.rules">
           <ion-item class="item" *ngFor="let rule of rules" [routerLink]="['/rule-confirmation']">
-            <img class="icon" name=iconName src="{{this.rule.photo}}">
+            <img class="icon" name=iconName src="https://ionicframework.com/docs/img/demos/avatar.svg">
             <ion-label class="label">{{rule.username}}</ion-label>
             <ion-label class="label">{{rule.name}}</ion-label>
           </ion-item>
@@ -19,7 +19,7 @@
 
         <div *ngIf="this.tasks">
           <ion-item class="item" *ngFor="let task of tasks" [routerLink]="['/task-confirmation']">
-            <img alt="User" class="icon" name=iconName src="{{this.task.photo}}">
+            <img alt="User" class="icon" name=iconName src="https://ionicframework.com/docs/img/demos/avatar.svg">
             <ion-label class="label">{{task.username}}</ion-label>
             <ion-label class="label">{{task.name}}</ion-label>
           </ion-item>
