--- a/frontend/Rank-Up/src/app/prizes-page/prizes-page.page.html
+++ b/frontend/Rank-Up/src/app/prizes-page/prizes-page.page.html
@@ -4,9 +4,8 @@
       <ion-icon name="arrow-back-outline" size="large"></ion-icon>
     </ion-button>
 
-    <div id="div-image">
-      <img>
-    </div>
+    <img class="imgUser" alt="Utente" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+
     <div id="div-image-title">{{user.name}} </div>
 
     <div id="div-points">Punti: {{userJoinsTeam.points}}</div>
@@ -16,15 +15,18 @@
       <div id="div-prize" *ngFor="let prize of prizes">
 
         <div id="div-div-prizes">
-          <div id="div-div-prizes-name" >{{prize.name}}</div>
-          <ion-button *ngIf="userJoinsTeam.points >= prize.price; else conditionFalse" (click)="showAlert(prize.name, prize.price, prize.id)" id="div-div-prizes-button">{{prize.price}} pt.</ion-button>
+          <div id="div-div-prizes-name">{{prize.name}}</div>
+          <ion-button *ngIf="userJoinsTeam.points >= prize.price; else conditionFalse"
+            (click)="showAlert(prize.name, prize.price, prize.id)" id="div-div-prizes-button">{{prize.price}}
+            pt.</ion-button>
           <ng-template #conditionFalse>
-            <ion-button [disabled]="true" (click)="showAlert(prize.name, prize.price, prize.id)" id="div-div-prizes-button-disable">{{prize.price}} pt.</ion-button>
+            <ion-button [disabled]="true" (click)="showAlert(prize.name, prize.price, prize.id)"
+              id="div-div-prizes-button-disable">{{prize.price}} pt.</ion-button>
           </ng-template>
         </div>
 
       </div>
-      </div>
+    </div>
 
   </div>
 </ion-content>
