--- a/frontend/Rank-Up/src/app/prizes-page/prizes-page.page.scss
+++ b/frontend/Rank-Up/src/app/prizes-page/prizes-page.page.scss
@@ -6,6 +6,12 @@
     background-color: black;
 }
 
+.imgUser {
+    margin-top: 8vh;
+    width: 10vh;
+    height: 10vh;
+    border-radius: 25px;
+}
 
 #div-image-title {
     margin-top: 0.5vh;
