--- a/frontend/Rank-Up/src/app/user-profile/user-profile.page.html
+++ b/frontend/Rank-Up/src/app/user-profile/user-profile.page.html
@@ -1,7 +1,7 @@
 <ion-content [fullscreen]="true">
   <div class="backgroundUser">
 
-    <img class="imgUser" src="{{this.user_photo}}"/>
+    <img class="imgUser" alt="Utente" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
 
     <div id="div-image-title">{{user_name}} {{user_surname}}</div>
 
