--- a/frontend/Rank-Up/src/app/user-team-profile/user-team-profile.page.html
+++ b/frontend/Rank-Up/src/app/user-team-profile/user-team-profile.page.html
@@ -6,7 +6,7 @@
     </ion-button>
 
 
-    <img alt="User" class="icon" name=iconName src={{user.photo}}>
+    <img class="imgUser" alt="Utente" src="https://ionicframework.com/docs/img/demos/avatar.svg"/>
 
 
     <ion-label class="userName">{{user.name}}</ion-label>
