--- a/frontend/Rank-Up/src/app/pending-tasks/pending-tasks.page.html
+++ b/frontend/Rank-Up/src/app/pending-tasks/pending-tasks.page.html
@@ -10,7 +10,7 @@
     <div class="listBox">
       <ion-list>
         <div *ngIf="this.rules">
-          <ion-item class="item" *ngFor="let rule of rules" [routerLink]="['/rule-confirmation']">
+          <ion-item class="item" (click)="clickUserRule(rule)" *ngFor="let rule of rules">
             <img class="icon" name=iconName src="https://ionicframework.com/docs/img/demos/avatar.svg">
             <ion-label class="label">{{rule.username}}</ion-label>
             <ion-label class="label">{{rule.name}}</ion-label>
@@ -18,7 +18,7 @@
         </div>
 
         <div *ngIf="this.tasks">
-          <ion-item class="item" *ngFor="let task of tasks" [routerLink]="['/task-confirmation']">
+          <ion-item class="item" (click)="clickUserTask(task)" *ngFor="let task of tasks">
             <img alt="User" class="icon" name=iconName src="https://ionicframework.com/docs/img/demos/avatar.svg">
             <ion-label class="label">{{task.username}}</ion-label>
             <ion-label class="label">{{task.name}}</ion-label>
