--- a/frontend/Rank-Up/src/app/home/home.page.html
+++ b/frontend/Rank-Up/src/app/home/home.page.html
@@ -32,7 +32,7 @@
             </div>
             <div *ngIf="!userOrAdmin(team)"class="team-card" (click)="goToTeamAdmin(team)">
               <div class="img-team-admin">
-                <img sizes="large" alt="Team" src={{team.photo}} />
+                <img sizes="large" alt="Team" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.kindpng.com%2Fpicc%2Fm%2F410-4108064_transparent-groups-of-people-clipart-team-icon-png.png&f=1&nofb=1&ipt=7e6d77faf7d2d967292fd2c9900358d6078b1dad3e041cc7d26632084638e101&ipo=images" />
               </div>
               <div class="team-name">
                 <span>{{team.name}}</span>
