--- a/frontend/Rank-Up/src/app/create-team/create-team.page.scss
+++ b/frontend/Rank-Up/src/app/create-team/create-team.page.scss
@@ -130,3 +130,9 @@ ion-alert.custom-alert {
 .modal {
   text-align: center;
 }
+
+.error-message {
+  align-items: center;
+  color: red;
+  font-size: 15px;
+}
