--- a/frontend/Rank-Up/src/app/send-rule/send-rule.page.html
+++ b/frontend/Rank-Up/src/app/send-rule/send-rule.page.html
@@ -42,6 +42,7 @@
 <ion-alert
   trigger="descrizione"
   header="Descrizione"
+  message={{this.data.description}}
   [buttons]="descrBtns"
 ></ion-alert>
 
