--- a/frontend/Rank-Up/src/app/admin-rule-completed/admin-rule-completed.page.html
+++ b/frontend/Rank-Up/src/app/admin-rule-completed/admin-rule-completed.page.html
@@ -6,16 +6,16 @@
       <ion-icon name="arrow-back-outline" class="iconaBack" size="large"></ion-icon>
     </ion-button>
 
-    <h1 class="title">Regola completata da<br/>{{user.username}}</h1>
+    <h1 class="title">Regola completata da<br/>{{rule.user.name}}</h1>
 
     <div class="div-element-bar">
-      <app-admin-element-bar class="elementbar" [buttonText]="'Regola'" [labelText]="rule.name"></app-admin-element-bar>
+      <app-admin-element-bar class="elementbar" [buttonText]="'Regola'" [labelText]="rule.rule.name"></app-admin-element-bar>
       <div class="space-div"></div>
-      <app-admin-element-bar class="elementbar" [buttonText]="'Punti'" [labelText]="rule.points"></app-admin-element-bar>
+      <app-admin-element-bar class="elementbar" [buttonText]="'Punti'" [labelText]="rule.rule.points"></app-admin-element-bar>
     </div>
 
     <ion-label class="label">Descrizione:</ion-label>
-    <ion-textarea class="commentArea" fill="outline" placeholder={{rule.description}} shape="round" [readonly] = true></ion-textarea>
+    <ion-textarea class="commentArea" fill="outline" placeholder={{rule.rule.description}} shape="round" [readonly] = true></ion-textarea>
     <ion-label class="label">Commento:</ion-label>
     <ion-textarea class="commentArea" fill="outline" placeholder={{ruleCompleted.comment}} shape="round" [readonly] = true></ion-textarea>
 
