--- a/frontend/Rank-Up/src/app/request-history/request-history.page.html
+++ b/frontend/Rank-Up/src/app/request-history/request-history.page.html
@@ -31,7 +31,7 @@
       <ion-list class="notifications" lines="none">
 
         <P>Accettate</P>
-        <ion-item class={{classAccepted}} *ngFor="let rule of rulesCompleted" [routerLink]="['/task-rejected']">
+        <ion-item class={{classAccepted}} *ngFor="let rule of rulesCompleted" (click)="clickRule(rule)"  [routerLink]="['/admin-rule-completed']">
           <ion-icon name={{iconAccepted}} size="small" class="icon"></ion-icon>
           <ion-label class="label">{{rule?.user?.name}}</ion-label>
           <ion-label class="label">{{rule?.rule?.name}}</ion-label>
@@ -39,7 +39,7 @@
         </ion-item>
 
         <p>Rifiutate</p>
-        <ion-item class={{classRejected}} *ngFor="let rule of rulesRejected" [routerLink]="['/task-rejected']">
+        <ion-item class={{classRejected}} *ngFor="let rule of rulesRejected" (click)="clickRule(rule)"  [routerLink]="['/rule-rejected']">
           <ion-icon name={{iconRejected}} size="small" class="icon"></ion-icon>
           <ion-label class="label">{{rule?.user?.name}}</ion-label>
           <ion-label class="label">{{rule?.rule?.name}}</ion-label>
@@ -53,7 +53,7 @@
       <ion-list class="notifications" lines="none">
 
         <p>Accettati</p>
-        <ion-item class={{classAccepted}} *ngFor="let task of tasksCompleted" [routerLink]="['/task-rejected']">
+        <ion-item class={{classAccepted}} *ngFor="let task of tasksCompleted" (click)="clickTask(task)" [routerLink]="['/completed-task']">
           <ion-icon name={{iconAccepted}} size="small" class="icon"></ion-icon>
           <ion-label class="label">{{task?.user?.name}}</ion-label>
           <ion-label class="label">{{task?.task?.name}}</ion-label>
@@ -61,7 +61,7 @@
         </ion-item>
 
         <p>Rifiutati</p>
-        <ion-item class={{classRejected}} *ngFor="let task of tasksRejected" [routerLink]="['/task-rejected']">
+        <ion-item class={{classRejected}} *ngFor="let task of tasksRejected"  (click)="clickTask(task)" [routerLink]="['/task-rejected']">
           <ion-icon name={{iconRejected}} size="small" class="icon"></ion-icon>
           <ion-label class="label">{{task?.user?.name}}</ion-label>
           <ion-label class="label">{{task?.task?.name}}</ion-label>
@@ -74,7 +74,7 @@
     <div class="listBox" *ngIf="segmentValue === 'prize'">
       <ion-list class="notifications" lines="none">
 
-        <ion-item *ngFor="let prize of prizes" [routerLink]="['/task-rejected']">
+        <ion-item *ngFor="let prize of prizes" (click)="clickPrize(prize)" [routerLink]="['/task-rejected']">
           <ion-icon name={{iconAccepted}} size="small" class="icon"></ion-icon>
           <ion-label class="label">{{prize}}</ion-label>
         </ion-item>
