--- a/frontend/Rank-Up/src/app/rule-rejected/rule-rejected.page.html
+++ b/frontend/Rank-Up/src/app/rule-rejected/rule-rejected.page.html
@@ -5,17 +5,17 @@
       <ion-icon name="arrow-back-outline" class="iconaBack" size="large"></ion-icon>
     </ion-button>
 
-    <h1 class="title">Regola di<br/>{{user.username}} rifiutata</h1>
+    <h1 class="title">Regola di<br/>{{rule.user.name}} rifiutata</h1>
 
     <div class="div-element-bar">
-      <app-admin-element-bar class="elementbar" [buttonText]="'Regola'" [labelText]="rule.name"></app-admin-element-bar>
+      <app-admin-element-bar class="elementbar" [buttonText]="'Regola'" [labelText]="rule.rule.name"></app-admin-element-bar>
       <div class="space-div"></div>
-      <app-admin-element-bar class="elementbar" [buttonText]="'Punti'" [labelText]="rule.points"></app-admin-element-bar>
+      <app-admin-element-bar class="elementbar" [buttonText]="'Punti'" [labelText]="rule.rule.points"></app-admin-element-bar>
     </div>
 
 
     <!-- Placeholder descrizione e commento vanno rivisti in quanto la posizione e' buggata (label="Descrizione" labelPlacement="stacked")-->
-    <ion-textarea class="descriptionArea" fill="outline" shape="round" [readonly] = true>{{rule.description}}</ion-textarea>
+    <ion-textarea class="descriptionArea" fill="outline" shape="round" [readonly] = true>{{rule.rule.description}}</ion-textarea>
     <ion-textarea class="commentArea" fill="outline" placeholder="Commento" shape="round" [readonly] = true>{{ruleCompleted.comment}}</ion-textarea>
 
     <ion-grid class="buttons-grid">
