--- a/frontend/Rank-Up/src/app/signup/signup.page.scss
+++ b/frontend/Rank-Up/src/app/signup/signup.page.scss
@@ -29,3 +29,19 @@ app-bt-user-small{
   font-weight: bold;
 }
 
+.email-error-message {
+  align-items: center;
+  color: red;
+  font-size: 12px;
+  margin-top: -2vh;
+  margin-left: -1vh;
+  margin-bottom: 1vh;
+}
+
+.error-message {
+  align-items: center;
+  color: red;
+  font-size: 12px;
+  margin-top: -2vh;
+  margin-bottom: 4vh;
+}
