--- a/frontend/Rank-Up/src/app/signup/signup.page.html
+++ b/frontend/Rank-Up/src/app/signup/signup.page.html
@@ -12,11 +12,13 @@
      </ul>
       <ion-input [(ngModel)]="user.name" [type]="'text'" label="Nome" labelPlacement="stacked" fill="outline" shape="round" mode="md" class="formInput"></ion-input>
       <ion-input [(ngModel)]="user.surname" [type]="'text'" label="Cognome" labelPlacement="stacked" fill="outline" shape="round" mode="md" class="formInput"></ion-input>
-      <ion-input [(ngModel)]="user.email" [type]="'text'" label="Email" labelPlacement="stacked" fill="outline" shape="round" mode="md" class="formInput"></ion-input>
+      <ion-input [(ngModel)]="user.email" (ionInput)="emailChecker()" [type]="'text'" label="Email" labelPlacement="stacked" fill="outline" shape="round" mode="md" class="formInput"></ion-input>
+      <ion-text *ngIf="emailErrorMessage" class="email-error-message">{{emailErrorMessage}}</ion-text>
       <ion-input [(ngModel)]="user.username" (ionInput)="username_checker()" [type]="'text'" label="Username" labelPlacement="stacked" fill="outline" shape="round" mode="md" class="formInput"></ion-input>
-      <ion-input [(ngModel)]="password" (ionInput)="password_checker()" [type]="'password'" label="Password" labelPlacement="stacked" fill="outline" shape="round" mode="md" class="formInput"></ion-input>
+      <ion-input [(ngModel)]="password" (ionInput)="password_checker()" type="password" label="Password" labelPlacement="stacked" fill="outline" shape="round" mode="md" class="formInput"></ion-input>
+      <ion-text *ngIf="log_error_password" class="error-message">{{log_error_password}}</ion-text>
 
-      <ion-button [disabled]="password_checker() || username_checker()" id="btUserSmall" (click)="signup()">Registrati</ion-button>
+      <ion-button [disabled]="!(password_checker() && username_checker() && emailChecker())" id="btUserSmall" (click)="signup()">Registrati</ion-button>
     </div>
   </div>
 
