--- a/frontend/Rank-Up/src/app/create-task/create-task.page.html
+++ b/frontend/Rank-Up/src/app/create-task/create-task.page.html
@@ -30,9 +30,9 @@
       </div>
 
       <div class="create-task-button">
-        <app-bt-admin-small text="Crea Task" (click)="backButton()" (click)="createTask()"></app-bt-admin-small>
+        <app-bt-admin-small text="Crea Task" (click)="backButton()" (click)="confirmationAlert()" (click)="createTask()"></app-bt-admin-small>
       </div>
     </div>
-  
+
   </div>
 </ion-content>
