--- a/frontend/Rank-Up/src/app/add-user/add-user.page.html
+++ b/frontend/Rank-Up/src/app/add-user/add-user.page.html
@@ -20,11 +20,11 @@
           </ion-item>
           <ion-item-options side="end">
             <ion-item-option class="option-one">
-              <ion-icon slot="top" name="person-add-outline" size="large" (click)="addAdmin(user.id)"></ion-icon>
+              <ion-icon slot="top" name="person-add-outline" size="large" (click)="addAdmin(user.idUser)"></ion-icon>
               Admin
             </ion-item-option>
             <ion-item-option class="option-two">
-              <ion-icon slot="top" name="person-add-outline" size="large" (click)="addUser(user.id)"></ion-icon>
+              <ion-icon slot="top" name="person-add-outline" size="large" (click)="addUser(user.idUser)"></ion-icon>
               Utente
             </ion-item-option>
           </ion-item-options>
