added code to team

--- a/frontend/Rank-Up/src/app/admin-home-team/admin-home-team.page.html
+++ b/frontend/Rank-Up/src/app/admin-home-team/admin-home-team.page.html
@@ -7,7 +7,7 @@
 
     <div>
       <h1 class="title">{{team.name}}</h1>
-      <h2 class="team-code">Codice: {{team.codice}}</h2>
+      <h2 class="team-code">Codice: {{team.code}}</h2>
     </div>
 
     <ion-button class="rightIcon" fill="clear" [routerLink] = "['/admin-team-settings']">
