--- a/frontend/Rank-Up/src/app/admin-team-settings/admin-team-settings.page.html
+++ b/frontend/Rank-Up/src/app/admin-team-settings/admin-team-settings.page.html
@@ -6,7 +6,7 @@
     </ion-button>
 
     <h1 class="title">{{team.name}}</h1>
-    <h2 class="team-code">Codice: {{team.codice}}</h2>
+    <h2 class="team-code">Codice: {{team.code}}</h2>
 
     <div class="buttons-div">
     <ion-button (click)="presentAlert1()" class="settings-button">Modifica nome team</ion-button>
