--- a/frontend/Rank-Up/src/app/rules-and-tasks-rules/rules-and-tasks-rules.page.html
+++ b/frontend/Rank-Up/src/app/rules-and-tasks-rules/rules-and-tasks-rules.page.html
@@ -5,7 +5,7 @@
     </ion-button>
 
     <h1 class="title">{{team.name}}</h1>
-    <div id="div-code">Codice: {{team.codice}}</div>
+    <div id="div-code">Codice: {{team.code}}</div>
 
     <div>
       <ion-segment value="1" (ionChange)="segmentChanged($event)">
