--- a/frontend/Rank-Up/src/app/team/team.page.html
+++ b/frontend/Rank-Up/src/app/team/team.page.html
@@ -11,7 +11,7 @@
         </ion-button>
 
         <h1 class="title">{{team.name}}</h1>
-        <h2 class="team-code">Codice: {{team.codice}}</h2>
+        <h2 class="team-code">Codice: {{team.code}}</h2>
 
         <ion-button class="premi" fill="clear" [routerLink] = "['/user/prizes-page']">
             <app-square-list class="squareList" [iconName]="'trophy-outline'" [text]="'Premi'"></app-square-list>
