--- a/frontend/Rank-Up/src/app/participants/participants.page.html
+++ b/frontend/Rank-Up/src/app/participants/participants.page.html
@@ -5,7 +5,7 @@
       <ion-icon name="arrow-back-outline" class="iconaBack" size="large"></ion-icon>
     </ion-button>
     <h1 class="title">{{team.name}}</h1>
-    <h2 class="team-code">Codice: {{team.codice}}</h2>
+    <h2 class="team-code">Codice: {{team.code}}</h2>
 
     <ion-searchbar class="search" (ionInput)="ricerca($event)" placeholder="Cerca"></ion-searchbar>
 
