--- a/frontend/Rank-Up/src/app/team-rules-tasks/team-rules-tasks.page.html
+++ b/frontend/Rank-Up/src/app/team-rules-tasks/team-rules-tasks.page.html
@@ -5,7 +5,7 @@
     </ion-button>
 
     <h1 class="title">{{team.name}}</h1>
-    <div id="div-code">Codice: {{team.codice}}</div>
+    <div id="div-code">Codice: {{team.code}}</div>
 
     <ion-button class="rightIcon" *ngIf="!stato" [routerLink] = "['/create-rule']">
       <ion-icon name="add-circle-outline" size="large" class="iconaRicerca"></ion-icon>
