--- a/frontend/Rank-Up/src/app/send-task/send-task.page.html
+++ b/frontend/Rank-Up/src/app/send-task/send-task.page.html
@@ -23,7 +23,7 @@
       <div class="pulsanteBox">
         <div class="titoloBox">
           <ion-button class="pulsante rifiuta">
-            <ion-icon name="close-circle-outline"></ion-icon>
+            <ion-icon name="close-circle-outline" [routerLink]="['/user/rules-and-tasks-rules']"></ion-icon>
           </ion-button>
           <div class="text">Rifiuta</div>
         </div>
