--- a/frontend/Rank-Up/src/app/create-prize/create-prize.page.html
+++ b/frontend/Rank-Up/src/app/create-prize/create-prize.page.html
@@ -15,7 +15,7 @@
       </div>
 
       <div class="create-prize-button">
-        <app-bt-admin-small text="Crea Premio" (click)="createPrize()" (click)="presentAlert()" (click)="backButton()"></app-bt-admin-small>
+        <app-bt-admin-small text="Crea Premio" (click)="createPrize()" (click)="backButton()"></app-bt-admin-small>
       </div>
     </div>
 
