--- a/frontend/Rank-Up/src/app/create-rule/create-rule.page.html
+++ b/frontend/Rank-Up/src/app/create-rule/create-rule.page.html
@@ -17,7 +17,7 @@
       <ion-textarea [(ngModel)]="rule.description" fill="outline" placeholder="Descrizione"></ion-textarea>
 
       <div class="create-rule-button">
-          <app-bt-admin-small text="Crea Regola" (click)="createRule()" (click)="presentAlert()" (click)="backButton()"></app-bt-admin-small>
+          <app-bt-admin-small text="Crea Regola" (click)="createRule()" (click)="backButton()"></app-bt-admin-small>
       </div>
     </div>
 
