--- a/frontend/Rank-Up/src/app/create-team/create-team.page.html
+++ b/frontend/Rank-Up/src/app/create-team/create-team.page.html
@@ -31,7 +31,7 @@
     <ion-label class="rulelabel">Aggiungi Regola</ion-label>
 
     <ion-button class="privacyTeam" (click)="presentAlert()">Privacy Team</ion-button>
-    <ion-button class="createTeam" (click)="navigate()" (click)="confirmationAlert()">Crea Team</ion-button>
+    <ion-button class="createTeam" (click)="navigate()">Crea Team</ion-button>
 
   </div>
 
