--- a/frontend/Rank-Up/src/app/home/home.page.html
+++ b/frontend/Rank-Up/src/app/home/home.page.html
@@ -1,4 +1,9 @@
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" >
+
+  <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+
   <div class="backgroundUser">
 
     <ion-button class="leftIcon" [routerLink]="['/notifications']">
