added refresh on all pages

--- a/frontend/Rank-Up/src/app/access-requests-list/access-requests-list.page.html
+++ b/frontend/Rank-Up/src/app/access-requests-list/access-requests-list.page.html
@@ -1,4 +1,9 @@
 <ion-content [fullscreen]="true">
+
+  <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+  
   <div class="backgroundAdmin">
 
     <ion-button class="leftIcon" (click)="backButton()" fill="clear">
