--- a/frontend/Rank-Up/src/app/notifications/notifications.page.html
+++ b/frontend/Rank-Up/src/app/notifications/notifications.page.html
@@ -1,5 +1,9 @@
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="bg">
 
+  <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+  
   <div [ngSwitch]="type">
 
     <div *ngSwitchCase="'utente'" class="backgroundUser">
