--- a/frontend/Rank-Up/src/app/search-team/search-team.page.html
+++ b/frontend/Rank-Up/src/app/search-team/search-team.page.html
@@ -1,4 +1,7 @@
 <ion-content [fullscreen]="true">
+  <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
   <div class="backgroundUser">
 
     <ion-button class="leftIcon" fill="clear" (click)="backButton()">
