--- a/frontend/Rank-Up/src/app/team-rules-tasks/team-rules-tasks.page.html
+++ b/frontend/Rank-Up/src/app/team-rules-tasks/team-rules-tasks.page.html
@@ -1,4 +1,8 @@
 <ion-content [fullscreen]="true">
+  <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+  
   <div class="backgroundAdmin">
     <ion-button class="leftIcon" fill="clear" (click)="backButton()">
       <ion-icon name="arrow-back-outline" size="large"></ion-icon>
