--- a/frontend/Rank-Up/src/app/create-team/create-team.page.html
+++ b/frontend/Rank-Up/src/app/create-team/create-team.page.html
@@ -13,7 +13,7 @@
     <h4 class="teamCode">Codice Team</h4>
 
     <ion-item>
-      <ion-input class="code" placeholder="{{this.team.codice}}" labelPlacement="stacked" [readonly]="true"></ion-input>
+      <ion-input class="code" placeholder="{{this.team.code}}" labelPlacement="stacked" [readonly]="true"></ion-input>
     </ion-item>
 
     <h4 class="insertName">Inserire Nome del Team</h4>
