--- a/frontend/Rank-Up/src/app/send-rule/send-rule.page.html
+++ b/frontend/Rank-Up/src/app/send-rule/send-rule.page.html
@@ -39,7 +39,7 @@
   </div>
 </ion-content>
 
-<ion-alert
+<ion-alert *ngIf="this.rule"
   trigger="descrizione"
   header="Descrizione"
   message={{rule.description}}
