--- a/frontend/Rank-Up/src/app/send-task/send-task.page.html
+++ b/frontend/Rank-Up/src/app/send-task/send-task.page.html
@@ -38,7 +38,7 @@
   </div>
 </ion-content>
 
-<ion-alert
+<ion-alert *ngIf="this.data"
   trigger="descrizione"
   header="Descrizione"
   message={{this.data.description}}
