--- a/frontend/Rank-Up/src/app/user-profile/user-profile.page.html
+++ b/frontend/Rank-Up/src/app/user-profile/user-profile.page.html
@@ -1,4 +1,7 @@
 <ion-content [fullscreen]="true">
+  <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
   <div class="backgroundUser">
 
     <img class="imgUser" alt="Utente" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
